--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,3 +1,7 @@
+.logo {
+  font-size: 40px;
+  animation: spin 4s infinite linear; /* Adjust the duration and animation type as needed */
+}
 .header {
   background-color: #eee;
 }
@@ -12,4 +16,18 @@
 .header .content ul {
   display: flex;
   gap: 20px;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    scale: 0.5;
+  }
+  50% {
+    transform: rotate(360deg);
+    scale: 1;
+  }
+  100% {
+    transform: rotate(0deg);
+    scale: 0.5;
+  }
 }
